--- a/index.css
+++ b/index.css
@@ -1,23 +1,60 @@
-.image { 
-   position: relative; 
-   width: 100%; /* for IE 6 */
+.background {
+	position: relative;
+	top: 0;
+	left:0;
+
+
 }
+.scoreboard{
+	position: absolute;
+	top: 750px;
+	left: 25px;
+
+}
+
+
+/*.image { 
+   position: relative; 
+   width: 100%; 
+   display:inline-block;	
+	}*/
+
 h2 { 
    position: absolute; 
    top: 200px; 
-   left: 0; 
+   left: 20px; 
    width: 100%; 
 }
 
 h2 span { 
    color: rgb(12, 247, 247);
-   font: bold 48px/90px Helvetica, Sans-Serif; 
+   font: bold 75px/150px Helvetica, Sans-Serif; 
    letter-spacing: -1px;  
-   background: rgb(0, 0, 0); /* fallback color */
+   background: rgb(0, 0, 0); 
    background: rgba(0, 0, 0, 0.7);
    padding: 10px; 
 }
 h2 span.spacer {
-   padding:0 5px;
+   padding:0 10px;
 }
 
+}
+#wrapper td {
+	position: absolute;
+   vertical-align: middle;
+   text-align: center;
+   top: 600px;
+   left: 25px;
+}
+
+/*div.horizontal {
+    display: flex;
+    justify-content: center;
+}
+
+div.vertical {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+*/
